# lolstonks-api-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  AUDIT_SUMMARY.txt  CHANGELOG.md  CHANGES_APPLIED.md  CONTRIBUTING.md  DOCS_UPDATE_SUMMARY.md  Dockerfile  LICENSE  Makefile  QUALITY_REPORT.md  QUALITY_SUMMARY.txt  README.md  SUPPORT.md  TESTING.md  TEST_RESULTS.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  openapi.json  pyproject.toml
.githooks/: pre-push
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  docs-verification.yml  docs.yml  release-develop.yml  release-production.yml
API_COVERAGE_COMPLETE/: index.html
ERROR_HANDLING/: index.html
api/cache/: index.html
api/models/: index.html
api/openapi-spec/: index.html
api/overview/: index.html
api/providers/: index.html
api/riot-client/: index.html
api/routers/: index.html
api/security/: index.html
api/tournament-api/: index.html
app/: __init__.py  config.py  exceptions.py  main.py
app/cache/: helpers.py  redis_cache.py  tracking.py
app/middleware/: __init__.py  error_monitoring.py
app/models/: __init__.py  account.py  challenges.py  champion.py  champion_mastery.py  clash.py  common.py  community_dragon.py  data_dragon.py  errors.py  league.py  league_exp.py  match.py  platform.py  spectator.py  summoner.py
app/providers/: __init__.py  base.py  community_dragon.py  data_dragon.py  registry.py  riot_api.py
app/riot/: client.py  key_rotator.py  rate_limiter.py  regions.py
app/routers/: __init__.py  account.py  challenges.py  champion.py  champion_mastery.py  clash.py  health.py  league.py  league_exp.py  match.py  monitoring.py  platform.py  security.py  spectator.py  summoner.py  tournament.py  tournament_stub.py
app/utils/: __init__.py  error_formatter.py
architecture/: index.html
architecture/caching/: index.html
architecture/implementation-details/: index.html
architecture/models/: index.html
architecture/overview/: index.html
architecture/rate-limiting/: index.html
architecture/routing/: index.html
architecture/system-overview/: index.html
architecture/tournament-router-implementation/: index.html
data/: openapi.json
dev/: 404.html  index.html  objects.inv
dev/ERROR_HANDLING/: index.html
dev/ERROR_HANDLING_SUMMARY/: index.html
dev/architecture/: index.html
dev/data/: openapi.json
dev/search/: search_index.json
development/changelog-guide/: index.html
development/ci-verification/: index.html
development/contributing/: index.html
development/documentation/: index.html
development/release-approval-setup/: index.html
development/releases/: index.html
development/testing/: index.html
development/versioning/: index.html
docs/: API_COVERAGE_COMPLETE.md  ERROR_HANDLING.md  ERROR_HANDLING_SUMMARY.md  KEY_ROTATION.md  README.md  api.md  architecture.md  contributing.md  index.md  setup.md
docs/api/: cache.md  models.md  openapi-spec.md  overview.md  providers.md  riot-client.md  routers.md  security.md  tournament-api.md
docs/architecture/: caching.md  data-flow.md  implementation-details.md  models.md  overview.md  rate-limiting.md  routing.md  system-overview.md  tournament-router-design.md  tournament-router-diagram.md  tournament-router-implementation.md  (+1 more)
overrides/: main.html
scripts/: bump_version.py  export_openapi.py  generate_api_docs.py  get_version.py  setup-hooks.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_config.py  test_error_handling.py  test_integration.py  test_key_rotation.py  test_main.py  test_models.py  test_providers.py  test_rate_limiter.py
(+92 files in other folders)
