[project]
name = "lolstonks-api-gateway"
version = "2.0.0"
description = "League of Legends API Gateway with caching, rate limiting, and comprehensive monitoring"
readme = "docs/index.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "starlette>=0.49.1",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.5.0",
    "aiolimiter>=1.1.0",
    "aiocache>=0.12.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "urllib3>=2.6.0",  # GHSA-gm62-xv2j-4w53, GHSA-2xpw-w6gg-jr37
    "filelock>=3.20.1",  # GHSA-w853-jp5j-5j7f
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.8.0",
    "pip-audit>=2.9.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-swagger-ui-tag>=0.6.0",
]

test-docs = [
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "pytest-html>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used test
